--- a/torch.css
+++ b/torch.css
@@ -16,6 +16,7 @@
       transform: translate(-50%, -50%);
       z-index: 2;
       color: aliceblue;
+     font-size: 5em;
     }
 
     .welcome {
@@ -25,6 +26,7 @@
       transform: translate(-50%, -50%);
       z-index: 1;
       color: aliceblue;
+     font-size: 5em;
     }
 
     .underline {
